[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"


[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [] }
copypasta = "0.10.1"
copypasta-ext = "=0.3.7"
tauri-plugin-clipboard = "1.1.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
